# L1ght_video

./: MODERN_UI_README.md  README.md  TESTING_GUIDE.md  create_icon.py  create_icons.bat  gui.py  main.py  requirements.txt  requirements_gui.txt  run.bat  setup.bat  test_python.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  App_OLD.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
